--- a/TCN/config.json
+++ b/TCN/config.json
@@ -1,7 +1,7 @@
 {
-    "DESK": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
-        "gesture_class_num": 8,
+    "All": {
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/All/All_TRANSFORM_velocity_MP.pkl",
+        "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
             "PSML_position_x",
@@ -20,7 +20,10 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Peg_Transfer/preprocessed"
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Peg_Transfer/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Suturing/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Knot_Tying/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -31,7 +34,7 @@
                 "weight_decay": 0.009702430951493164
             },
             "model_params": {
-                "class_num": 8,
+                "class_num": 6,
                 "decoder_params": {
                     "input_size": 128,
                     "kernel_size": 51,
@@ -117,10 +120,10 @@
         ],
         "validation_trial": 1
     },
-    "JIGSAWS": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/JIGSAWS_TRANSFORM_all_gesture.pkl",
-        "gesture_class_num": 14,
-        "input_size": 22,
+    "DESK": {
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/DESK/DESK_TRANSFORM_velocity_gesture.pkl",
+        "gesture_class_num": 7,
+        "input_size": 14,
         "locs": [
             "PSML_position_x",
             "PSML_position_y",
@@ -128,10 +131,6 @@
             "PSML_velocity_x",
             "PSML_velocity_y",
             "PSML_velocity_z",
-            "PSML_orientation_x",
-            "PSML_orientation_y",
-            "PSML_orientation_z",
-            "PSML_orientation_w",
             "PSML_gripper_angle",
             "PSMR_position_x",
             "PSMR_position_y",
@@ -139,29 +138,24 @@
             "PSMR_velocity_x",
             "PSMR_velocity_y",
             "PSMR_velocity_z",
-            "PSMR_orientation_x",
-            "PSMR_orientation_y",
-            "PSMR_orientation_z",
-            "PSMR_orientation_w",
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Suturing/preprocessed",
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Needle_Passing/preprocessed"
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Peg_Transfer/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
             "config": {
                 "batch_size": 1,
-                "learning_rate": 0.00027347155281573553,
-                "num_epochs": 30,
-                "weight_decay": 0.00037328332914909917
+                "epoch": 150,
+                "learning_rate": 0.0009814991496677643,
+                "weight_decay": 0.009702430951493164
             },
             "model_params": {
-                "class_num": 14,
+                "class_num": 7,
                 "decoder_params": {
                     "input_size": 128,
-                    "kernel_size": 51,
+                    "kernel_size": 29,
                     "layer_sizes": [
                         96,
                         64,
@@ -172,8 +166,8 @@
                     "transposed_conv": true
                 },
                 "encoder_params": {
-                    "input_size": 22,
-                    "kernel_size": 51,
+                    "input_size": 14,
+                    "kernel_size": 29,
                     "layer_sizes": [
                         64,
                         96,
@@ -195,43 +189,242 @@
             2,
             3,
             4,
-            5
+            5,
+            6,
+            7,
+            8
         ],
         "train_trial": [
             [
                 2,
                 3,
                 4,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 3,
                 4,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 2,
                 4,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 2,
                 3,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 2,
                 3,
-                4
+                4,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7
             ]
         ],
         "validation_trial": 1
     },
-    "dataset_name": "DESK",
+    "JIGSAWS": {
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/JIGSAWS/JIGSAWS_TRANSFORM_orientation_gesture.pkl",
+        "gesture_class_num": 14,
+        "input_size": 16,
+        "locs": [
+            "PSML_position_x",
+            "PSML_position_y",
+            "PSML_position_z",
+            "PSML_orientation_x",
+            "PSML_orientation_y",
+            "PSML_orientation_z",
+            "PSML_orientation_w",
+            "PSML_gripper_angle",
+            "PSMR_position_x",
+            "PSMR_position_y",
+            "PSMR_position_z",
+            "PSMR_orientation_x",
+            "PSMR_orientation_y",
+            "PSMR_orientation_z",
+            "PSMR_orientation_w",
+            "PSMR_gripper_angle"
+        ],
+        "raw_feature_dir": [
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Suturing/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Knot_Tying/preprocessed"
+        ],
+        "sample_rate": 1,
+        "tcn_params": {
+            "config": {
+                "batch_size": 1,
+                "learning_rate": 0.00027347155281573553,
+                "num_epochs": 30,
+                "weight_decay": 0.00037328332914909917
+            },
+            "model_params": {
+                "class_num": 14,
+                "decoder_params": {
+                    "input_size": 128,
+                    "kernel_size": 89,
+                    "layer_sizes": [
+                        96,
+                        64,
+                        64
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel",
+                    "transposed_conv": true
+                },
+                "encoder_params": {
+                    "input_size": 16,
+                    "kernel_size": 89,
+                    "layer_sizes": [
+                        64,
+                        96,
+                        128
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel"
+                },
+                "fc_size": 32,
+                "mid_lstm_params": {
+                    "hidden_size": 64,
+                    "input_size": 128,
+                    "layer_num": 1
+                }
+            }
+        },
+        "test_trial": [
+            2,
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ],
+        "train_trial": [
+            [
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8
+            ]
+        ],
+        "validation_trial": 2
+    },
+    "dataset_name": "JIGSAWS",
     "experiment_setup": {
         "sample_rate": 1
     }
