--- a/TCN/config.json
+++ b/TCN/config.json
@@ -37,7 +37,7 @@
                 "class_num": 6,
                 "decoder_params": {
                     "input_size": 128,
-                    "kernel_size": 51,
+                    "kernel_size": 22,
                     "layer_sizes": [
                         96,
                         64,
@@ -49,7 +49,7 @@
                 },
                 "encoder_params": {
                     "input_size": 14,
-                    "kernel_size": 51,
+                    "kernel_size": 22,
                     "layer_sizes": [
                         64,
                         96,
@@ -118,11 +118,21 @@
                 5
             ]
         ],
-        "validation_trial": 1
+        "validation_trial": 1,
+        "validation_trial_train": [
+            2,
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ]
     },
     "DESK": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/DESK/DESK_TRANSFORM_velocity_gesture.pkl",
-        "gesture_class_num": 7,
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
+        "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
             "PSML_position_x",
@@ -152,10 +162,10 @@
                 "weight_decay": 0.009702430951493164
             },
             "model_params": {
-                "class_num": 7,
+                "class_num": 6,
                 "decoder_params": {
                     "input_size": 128,
-                    "kernel_size": 29,
+                    "kernel_size": 45,
                     "layer_sizes": [
                         96,
                         64,
@@ -167,7 +177,7 @@
                 },
                 "encoder_params": {
                     "input_size": 14,
-                    "kernel_size": 29,
+                    "kernel_size": 45,
                     "layer_sizes": [
                         64,
                         96,
@@ -190,9 +200,7 @@
             3,
             4,
             5,
-            6,
-            7,
-            8
+            6
         ],
         "train_trial": [
             [
@@ -200,96 +208,71 @@
                 3,
                 4,
                 5,
-                6,
-                7,
-                8
+                6
             ],
             [
                 1,
                 3,
                 4,
                 5,
-                6,
-                7,
-                8
+                6
             ],
             [
                 1,
                 2,
                 4,
                 5,
-                6,
-                7,
-                8
+                6
             ],
             [
                 1,
                 2,
                 3,
                 5,
-                6,
-                7,
-                8
+                6
             ],
             [
                 1,
                 2,
                 3,
                 4,
-                6,
-                7,
-                8
+                6
             ],
             [
                 1,
                 2,
                 3,
                 4,
-                5,
-                7,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                5,
-                6,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                5,
-                6,
-                7
+                5
             ]
         ],
-        "validation_trial": 1
+        "validation_trial": 1,
+        "validation_trial_train": [
+            2,
+            3,
+            4,
+            5,
+            6
+        ]
     },
     "JIGSAWS": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/JIGSAWS/JIGSAWS_TRANSFORM_orientation_gesture.pkl",
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/JIGSAWS/JIGSAWS_TRANSFORM_velocity_gesture.pkl",
         "gesture_class_num": 14,
-        "input_size": 16,
+        "input_size": 14,
         "locs": [
             "PSML_position_x",
             "PSML_position_y",
             "PSML_position_z",
-            "PSML_orientation_x",
-            "PSML_orientation_y",
-            "PSML_orientation_z",
-            "PSML_orientation_w",
+            "PSML_velocity_x",
+            "PSML_velocity_y",
+            "PSML_velocity_z",
             "PSML_gripper_angle",
             "PSMR_position_x",
             "PSMR_position_y",
             "PSMR_position_z",
-            "PSMR_orientation_x",
-            "PSMR_orientation_y",
-            "PSMR_orientation_z",
-            "PSMR_orientation_w",
+            "PSMR_velocity_x",
+            "PSMR_velocity_y",
+            "PSMR_velocity_z",
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
@@ -320,7 +303,7 @@
                     "transposed_conv": true
                 },
                 "encoder_params": {
-                    "input_size": 16,
+                    "input_size": 14,
                     "kernel_size": 89,
                     "layer_sizes": [
                         64,
@@ -422,9 +405,19 @@
                 8
             ]
         ],
-        "validation_trial": 2
+        "validation_trial": 2,
+        "validation_trial_train": [
+            2,
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ]
     },
-    "dataset_name": "JIGSAWS",
+    "dataset_name": "DESK",
     "experiment_setup": {
         "sample_rate": 1
     }
