--- a/TCN/config.json
+++ b/TCN/config.json
@@ -20,10 +20,10 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Peg_Transfer/preprocessed",
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Suturing/preprocessed",
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Needle_Passing/preprocessed",
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Knot_Tying/preprocessed"
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Suturing/preprocessed",
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -37,7 +37,7 @@
                 "class_num": 6,
                 "decoder_params": {
                     "input_size": 128,
-                    "kernel_size": 22,
+                    "kernel_size": 51,
                     "layer_sizes": [
                         96,
                         64,
@@ -49,7 +49,7 @@
                 },
                 "encoder_params": {
                     "input_size": 14,
-                    "kernel_size": 22,
+                    "kernel_size": 51,
                     "layer_sizes": [
                         64,
                         96,
@@ -118,20 +118,10 @@
                 5
             ]
         ],
-        "validation_trial": 1,
-        "validation_trial_train": [
-            2,
-            3,
-            4,
-            5,
-            6,
-            7,
-            8,
-            9
-        ]
+        "validation_trial": 1
     },
     "DESK": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
+        "data_transform_path": "/home/student/Downloads/COMPASS-main/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
         "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
@@ -151,7 +141,7 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Peg_Transfer/preprocessed"
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -256,8 +246,8 @@
         ]
     },
     "JIGSAWS": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/JIGSAWS/JIGSAWS_TRANSFORM_velocity_gesture.pkl",
-        "gesture_class_num": 14,
+        "data_transform_path": "/home/student/Downloads/COMPASS-main/TCN/JIGSAWS/JIGSAWS_TRANSFORM_velocity_MP.pkl",
+        "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
             "PSML_position_x",
@@ -276,9 +266,9 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Suturing/preprocessed",
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Needle_Passing/preprocessed",
-            "/home/student/Documents/Research/MICCAI_2022/Datasets/dV/Knot_Tying/preprocessed"
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Suturing/preprocessed",
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/student/Downloads/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -289,10 +279,10 @@
                 "weight_decay": 0.00037328332914909917
             },
             "model_params": {
-                "class_num": 14,
+                "class_num": 6,
                 "decoder_params": {
                     "input_size": 128,
-                    "kernel_size": 89,
+                    "kernel_size": 23,
                     "layer_sizes": [
                         96,
                         64,
@@ -304,7 +294,7 @@
                 },
                 "encoder_params": {
                     "input_size": 14,
-                    "kernel_size": 89,
+                    "kernel_size": 23,
                     "layer_sizes": [
                         64,
                         96,
@@ -322,87 +312,42 @@
             }
         },
         "test_trial": [
+            1,
             2,
             3,
             4,
-            5,
-            6,
-            7,
-            8,
-            9
+            5
         ],
         "train_trial": [
             [
-                3,
-                4,
-                5,
-                6,
-                7,
-                8,
-                9
-            ],
-            [
-                2,
-                4,
-                5,
-                6,
-                7,
-                8,
-                9
-            ],
-            [
-                2,
-                3,
-                5,
-                6,
-                7,
-                8,
-                9
-            ],
-            [
                 2,
                 3,
                 4,
-                6,
-                7,
-                8,
-                9
+                5
             ],
             [
-                2,
+                1,
                 3,
                 4,
-                5,
-                7,
-                8,
-                9
+                5
             ],
             [
+                1,
                 2,
-                3,
                 4,
-                5,
-                6,
-                8,
-                9
+                5
             ],
             [
+                1,
                 2,
                 3,
-                4,
-                5,
-                6,
-                7,
-                9
+                5
             ],
             [
+                1,
                 2,
                 3,
-                4,
-                5,
-                6,
-                7,
-                8
+                4
             ]
         ],
         "validation_trial": 2,
@@ -410,15 +355,12 @@
             2,
             3,
             4,
-            5,
-            6,
-            7,
-            8,
-            9
+            5
         ]
     },
     "dataset_name": "DESK",
     "experiment_setup": {
-        "sample_rate": 1
+        "sample_rate": 1,
+        "val_type": "LOSO"
     }
 }
