--- a/TCN/config.json
+++ b/TCN/config.json
@@ -1,6 +1,6 @@
 {
-    "All": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/TCN/All/All_TRANSFORM_velocity_MP.pkl",
+    "All-5a": {
+        "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/All-5a/All-5a_TRANSFORM_velocity_MP.pkl",
         "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
@@ -20,10 +20,128 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Suturing/preprocessed",
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Suturing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Pea_on_a_Peg/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Post_and_Sleeve/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
+        ],
+        "sample_rate": 1,
+        "tcn_params": {
+            "config": {
+                "batch_size": 0,
+                "epoch": 50,
+                "learning_rate": 0,
+                "weight_decay": 0
+            },
+            "model_params": {
+                "class_num": 6,
+                "decoder_params": {
+                    "input_size": 128,
+                    "kernel_size": 23,
+                    "layer_sizes": [
+                        96,
+                        64,
+                        64
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel",
+                    "transposed_conv": true
+                },
+                "encoder_params": {
+                    "input_size": 14,
+                    "kernel_size": 23,
+                    "layer_sizes": [
+                        64,
+                        96,
+                        128
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel"
+                },
+                "fc_size": 32,
+                "mid_lstm_params": {
+                    "hidden_size": 64,
+                    "input_size": 128,
+                    "layer_num": 1
+                }
+            }
+        },
+        "test_trial": [
+            1,
+            2,
+            3,
+            4,
+            5
+        ],
+        "train_trial": [
+            [
+                2,
+                3,
+                4,
+                5
+            ],
+            [
+                1,
+                3,
+                4,
+                5
+            ],
+            [
+                1,
+                2,
+                4,
+                5
+            ],
+            [
+                1,
+                2,
+                3,
+                5
+            ],
+            [
+                1,
+                2,
+                3,
+                4
+            ]
+        ],
+        "validation_trial": 1,
+        "validation_trial_train": [
+            2,
+            3,
+            4,
+            5
+        ]
+    },
+    "All-5b": {
+        "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/All/All_TRANSFORM_velocity_MP.pkl",
+        "gesture_class_num": 6,
+        "input_size": 14,
+        "locs": [
+            "PSML_position_x",
+            "PSML_position_y",
+            "PSML_position_z",
+            "PSML_velocity_x",
+            "PSML_velocity_y",
+            "PSML_velocity_z",
+            "PSML_gripper_angle",
+            "PSMR_position_x",
+            "PSMR_position_y",
+            "PSMR_position_z",
+            "PSMR_velocity_x",
+            "PSMR_velocity_y",
+            "PSMR_velocity_z",
+            "PSMR_gripper_angle"
+        ],
+        "raw_feature_dir": [
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Suturing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Pea_on_a_Peg/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Post_and_Sleeve/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -121,7 +239,7 @@
         "validation_trial": 1
     },
     "DESK": {
-        "data_transform_path": "/home/student/Downloads/COMPASS-main/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
+        "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
         "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
@@ -141,7 +259,7 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed"
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -246,7 +364,7 @@
         ]
     },
     "JIGSAWS": {
-        "data_transform_path": "/home/student/Downloads/COMPASS-main/TCN/JIGSAWS/JIGSAWS_TRANSFORM_velocity_MP.pkl",
+        "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/JIGSAWS/JIGSAWS_TRANSFORM_velocity_MP.pkl",
         "gesture_class_num": 6,
         "input_size": 14,
         "locs": [
@@ -266,9 +384,9 @@
             "PSMR_gripper_angle"
         ],
         "raw_feature_dir": [
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Suturing/preprocessed",
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
-            "/home/student/Downloads/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Suturing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
         ],
         "sample_rate": 1,
         "tcn_params": {
@@ -358,7 +476,7 @@
             5
         ]
     },
-    "dataset_name": "DESK",
+    "dataset_name": "All-5a",
     "experiment_setup": {
         "sample_rate": 1,
         "val_type": "LOSO"
