--- a/TCN/config.json
+++ b/TCN/config.json
@@ -23,8 +23,168 @@
             "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
             "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Suturing/preprocessed",
             "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Pea_on_a_Peg/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Post_and_Sleeve/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
+        ],
+        "sample_rate": 1,
+        "tcn_params": {
+            "config": {
+                "batch_size": 0,
+                "epoch": 50,
+                "learning_rate": 0,
+                "weight_decay": 0
+            },
+            "model_params": {
+                "class_num": 6,
+                "decoder_params": {
+                    "input_size": 128,
+                    "kernel_size": 23,
+                    "layer_sizes": [
+                        96,
+                        64,
+                        64
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel",
+                    "transposed_conv": true
+                },
+                "encoder_params": {
+                    "input_size": 14,
+                    "kernel_size": 23,
+                    "layer_sizes": [
+                        64,
+                        96,
+                        128
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel"
+                },
+                "fc_size": 32,
+                "mid_lstm_params": {
+                    "hidden_size": 64,
+                    "input_size": 128,
+                    "layer_num": 1
+                }
+            }
+        },
+        "test_trial": [
+            2,
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ],
+        "train_trial": [
+            [
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8
+            ]
+        ],
+        "validation_trial": 2,
+        "validation_trial_train": [
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ]
+    },
+    "All-5b": {
+        "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/All-5b/All-5b_TRANSFORM_velocity_MP.pkl",
+        "gesture_class_num": 6,
+        "input_size": 14,
+        "locs": [
+            "PSML_position_x",
+            "PSML_position_y",
+            "PSML_position_z",
+            "PSML_velocity_x",
+            "PSML_velocity_y",
+            "PSML_velocity_z",
+            "PSML_gripper_angle",
+            "PSMR_position_x",
+            "PSMR_position_y",
+            "PSMR_position_z",
+            "PSMR_velocity_x",
+            "PSMR_velocity_y",
+            "PSMR_velocity_z",
+            "PSMR_gripper_angle"
+        ],
+        "raw_feature_dir": [
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Suturing/preprocessed",
+            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
             "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
         ],
         "sample_rate": 1,
@@ -73,38 +233,83 @@
             2,
             3,
             4,
-            5
+            5,
+            6,
+            7,
+            8
         ],
         "train_trial": [
             [
                 2,
                 3,
                 4,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 3,
                 4,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 2,
                 4,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 2,
                 3,
-                5
+                5,
+                6,
+                7,
+                8
             ],
             [
                 1,
                 2,
                 3,
-                4
+                4,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7
             ]
         ],
         "validation_trial": 1,
@@ -112,131 +317,11 @@
             2,
             3,
             4,
-            5
-        ]
-    },
-    "All-5b": {
-        "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/All/All_TRANSFORM_velocity_MP.pkl",
-        "gesture_class_num": 6,
-        "input_size": 14,
-        "locs": [
-            "PSML_position_x",
-            "PSML_position_y",
-            "PSML_position_z",
-            "PSML_velocity_x",
-            "PSML_velocity_y",
-            "PSML_velocity_z",
-            "PSML_gripper_angle",
-            "PSMR_position_x",
-            "PSMR_position_y",
-            "PSMR_position_z",
-            "PSMR_velocity_x",
-            "PSMR_velocity_y",
-            "PSMR_velocity_z",
-            "PSMR_gripper_angle"
-        ],
-        "raw_feature_dir": [
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Peg_Transfer/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Suturing/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Needle_Passing/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Pea_on_a_Peg/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Post_and_Sleeve/preprocessed",
-            "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/Datasets/dV/Knot_Tying/preprocessed"
-        ],
-        "sample_rate": 1,
-        "tcn_params": {
-            "config": {
-                "batch_size": 1,
-                "epoch": 150,
-                "learning_rate": 0.0009814991496677643,
-                "weight_decay": 0.009702430951493164
-            },
-            "model_params": {
-                "class_num": 6,
-                "decoder_params": {
-                    "input_size": 128,
-                    "kernel_size": 51,
-                    "layer_sizes": [
-                        96,
-                        64,
-                        64
-                    ],
-                    "layer_type": "TempConv",
-                    "norm_type": "Channel",
-                    "transposed_conv": true
-                },
-                "encoder_params": {
-                    "input_size": 14,
-                    "kernel_size": 51,
-                    "layer_sizes": [
-                        64,
-                        96,
-                        128
-                    ],
-                    "layer_type": "TempConv",
-                    "norm_type": "Channel"
-                },
-                "fc_size": 32,
-                "mid_lstm_params": {
-                    "hidden_size": 64,
-                    "input_size": 128,
-                    "layer_num": 1
-                }
-            }
-        },
-        "test_trial": [
-            1,
-            2,
-            3,
-            4,
             5,
-            6
-        ],
-        "train_trial": [
-            [
-                2,
-                3,
-                4,
-                5,
-                6
-            ],
-            [
-                1,
-                3,
-                4,
-                5,
-                6
-            ],
-            [
-                1,
-                2,
-                4,
-                5,
-                6
-            ],
-            [
-                1,
-                2,
-                3,
-                5,
-                6
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                6
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                5
-            ]
-        ],
-        "validation_trial": 1
+            6,
+            7,
+            8
+        ]
     },
     "DESK": {
         "data_transform_path": "/home/aurora/Documents/MICCAI2022_baseline/COMPASS-main-1/COMPASS-main/TCN/DESK/DESK_TRANSFORM_velocity_MP.pkl",
@@ -476,7 +561,7 @@
             5
         ]
     },
-    "dataset_name": "All-5a",
+    "dataset_name": "All-5b",
     "experiment_setup": {
         "sample_rate": 1,
         "val_type": "LOSO"
