Added readme; fixed some bug that crashed the gesture and MP labeling app

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-*.avi
-*.mp4
-*.txt
+Context Labeling App/Datasets
+Context Labeling App/compass-env
+Context Labeling App/__pycache__
+.vscode/launch.json
